# dataclaw

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dataclaw/: cli.py  config.py
dataclaw/_cli/: commands.py  common.py  exporting.py  review.py
dataclaw/parsers/: codex.py  opencode.py
docs/: claude-code-vs-cchv-gaps.md  codex-vs-cchv-gaps.md  cursor-vs-cchv-gaps.md  gemini-vs-cchv-gaps.md  opencode-vs-cchv-gaps.md
scripts/: export_kaidol_conversations.py
tests/: test_anonymizer.py  test_cli_exporting.py  test_cli_facade.py  test_config.py  test_parser_codex.py  test_parser_opencode.py
