[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclaw"
version = "0.3.2"
description = "Export your coding agent conversations to Hugging Face as structured data"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Banodoco"},
]
keywords = ["claude-code", "codex", "gemini-cli", "opencode", "openclaw", "huggingface", "dataset", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/banodoco/dataclaw"
Repository = "https://github.com/banodoco/dataclaw"
Issues = "https://github.com/banodoco/dataclaw/issues"

[project.scripts]
dataclaw = "dataclaw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
